# PixFoundry

./: .gitignore  CMakeLists.txt  LICENSE  README.rst  pyproject.toml
.github/workflows/: ci.yml
benchmark/: README.md  run_bench.py
benchmark_output/: meta.json  report.md  results.csv
include/pixfoundry/: color.hpp  effects.hpp  filters.hpp  geometry.hpp  image.hpp
pixfoundry/: __init__.py
python/: bindings.cpp
src/: color.cpp  core.cpp  effects.cpp  filters.cpp  geometry.cpp
test/: conftest.py  test_against_opencv.py  test_color.py  test_correctness.py  test_effects.py  test_filters.py  test_filters_week3.py  test_geometry.py  test_io.py  test_zerocopy.py
